tests/cases/structs/errors/struct-literal-field-type.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let point = Point { x: true };
  return point.x;
}
